# NisseBolt

./: .gitignore  CHANGELOG.md  Makefile.config.in  README.md  config.h.in  configure  configure.ac
img/: NisseBolt.xcf
src/: Makefile
src/NB/: Makefile  NB.cpp  NBConfig.h  NBServer.cpp  NBServer.h
src/NisseBolt/: .gitignore  Ack.cpp  Ack.h  App.cpp  App.h  AppConfig.h  Handlers.h  Makefile  Runners.h  Say.cpp  Say.h  View.cpp  View.h
src/ThorsSlack/: API.h  APIBlockActions.h  APIBlockActionsState.h  APIBlockState.h  APIChatMessage.h  APIChatSchedule.h  APIChatStream.h  APIConversationsHistory.h  APIReactions.h  APIShortCut.h  APIViews.h  APIViewsReply.h  Client.h  EventAppMentioned.h  EventCallback.h  EventCallbackApp.h  EventCallbackAssistantThread.h  EventCallbackCallRejected.h  EventCallbackChannel.h  EventCallbackDnd.h  EventCallbackEmail.h  EventCallbackEmojiChanged.h  EventCallbackEntityDetails.h  EventCallbackFile.h  EventCallbackFunctionExecuted.h  EventCallbackGrid.h  EventCallbackGroup.h  EventCallbackIm.h  EventCallbackInviteRequested.h  EventCallbackLinkShared.h  EventCallbackMember.h  EventCallbackMessageMetadata.h  EventCallbackSharedChannel.h  EventCallbackSubteam.h  EventCallbackTeam.h  EventCallbackTokensRevoked.h  EventCallbackUser.h  EventHandler.h  EventMessage.h  EventsApp.h  (+7 more)
src/ThorsSlack/test/: APIAuthTest.cpp  APIChatMessageTest.cpp  APIChatScheduleTest.cpp  APIChatUtilTest.cpp  APIPinsTest.cpp  APIReactionsTest.cpp  APIStarTest.cpp  BlockKitTest.cpp  Environment.h  EventMessageTest.cpp  SlackBlockKitTest.cpp
